# src/routes/api/faqs/updateCheckFAQCategoryConflict.ts
@@ -1,19 +1,19 @@
 import express, { Request, Response } from "express";
 import { Pool } from "../../../../config/connectDB";
 import { PoolConnection, RowDataPacket } from "mysql2/promise";
-import { UpdateCheckFAQCategoryDuplicateRequest, CheckFAQCategoryDuplicateResponse } from '../../../types/faq';
+import { UpdateCheckFAQCategoryConflictRequest, CheckFAQCategoryConflictResponse } from '../../../types/faq';
 
 
 const router = express.Router();
 
-// @route   Get api/faqs/create/category/check
-// @desc    Check all categories for duplicates
+// @route   Get api/faqs/create/category/conflict
+// @desc    Check all categories for conflicts
 // @access  Private
-router.post("/update/category/check", async (req: Request, res: Response) => {
+router.post("/update/category/conflict", async (req: Request, res: Response) => {
   const connection : PoolConnection= await Pool.getConnection();
-  const { faq_id, maincategory_ko, maincategory_en, subcategory_ko, subcategory_en } : UpdateCheckFAQCategoryDuplicateRequest['body'] = req.body;
+  const { faq_id, maincategory_ko, maincategory_en, subcategory_ko, subcategory_en } : UpdateCheckFAQCategoryConflictRequest['body'] = req.body;
   try {
-    let isDuplicated = false;
+    let isConflict = false;
     const [[now_category]] = await connection.execute<RowDataPacket[]>(
       `SELECT faqs.maincategory_ko, faqs.maincategory_en, faqs.subcategory_ko, faqs.subcategory_en FROM hobit.faqs WHERE faqs.id = ?`,
       [faq_id]
@@ -34,9 +34,9 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
     const changed_subcategory_ko = now_category.subcategory_ko === subcategory_ko ? false : true;
     const changed_subcategory_en = now_category.subcategory_en === subcategory_en ? false : true;
 
-    const changedData : CheckFAQCategoryDuplicateResponse['data']['changedData'] = [];
-    const mainConflict: CheckFAQCategoryDuplicateResponse['data']['changedData'][number]['conflict'] = [];
-    const subConflict: CheckFAQCategoryDuplicateResponse['data']['changedData'][number]['conflict'] = [];
+    const conflictedData : CheckFAQCategoryConflictResponse['data']['conflictedData'] = [];
+    const mainConflict: CheckFAQCategoryConflictResponse['data']['conflictedData'][number]['conflict'] = [];
+    const subConflict: CheckFAQCategoryConflictResponse['data']['conflictedData'][number]['conflict'] = [];
 
     const [new_maincategory_ko] = await connection.execute<RowDataPacket[]>(
       `SELECT maincategory_ko FROM hobit.faqs WHERE faqs.maincategory_en = ?`,
@@ -148,8 +148,8 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
     }
 
     if (mainConflict.length > 0) {
-      isDuplicated = true;
-      changedData.push({
+      isConflict = true;
+      conflictedData.push({
         field: 'maincategory',
         input: {
           ko: maincategory_ko,
@@ -160,8 +160,8 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
     }
 
     if (subConflict.length > 0) {
-      isDuplicated = true;
-      changedData.push({
+      isConflict = true;
+      conflictedData.push({
         field: 'subcategory',
         input: {
           ko: subcategory_ko,
@@ -173,12 +173,12 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
 
     console.log()
 
-    const response : CheckFAQCategoryDuplicateResponse = {
+    const response : CheckFAQCategoryConflictResponse = {
       statusCode: 200,
       message: "Categories checked successfully",
       data : {
-        isDuplicated: isDuplicated,
-        changedData: changedData
+        isConflict: isConflict,
+        conflictedData: conflictedData
       }
     };
     console.log(response);
