# src/routes/api/seniorfaqs/updateCheckSeniorFAQCategoryConflict.ts
@@ -1,18 +1,18 @@
 import express, { Request, Response } from "express";
 import { Pool } from "../../../../config/connectDB";
 import { PoolConnection, RowDataPacket } from "mysql2/promise";
-import { UpdateCheckSeniorFAQCategoryDuplicateRequest, CheckSeniorFAQCategoryDuplicateResponse } from '../../../types/seniorfaq';
+import { UpdateCheckSeniorFAQCategoryConflictRequest, CheckSeniorFAQCategoryConflictResponse } from '../../../types/seniorfaq';
 
 const router = express.Router();
 
-// @route   Get api/seniorfaqs/update/category/check
-// @desc    Check all categories for duplicates
+// @route   Get api/seniorfaqs/update/category/conflict
+// @desc    Check all categories for conflicts
 // @access  Private
-router.post("/update/category/check", async (req: Request, res: Response) => {
+router.post("/update/category/conflict", async (req: Request, res: Response) => {
   const connection : PoolConnection= await Pool.getConnection();
-  const { senior_faq_id, maincategory_ko, maincategory_en, subcategory_ko, subcategory_en, detailcategory_ko, detailcategory_en } : UpdateCheckSeniorFAQCategoryDuplicateRequest['body'] = req.body;
+  const { senior_faq_id, maincategory_ko, maincategory_en, subcategory_ko, subcategory_en, detailcategory_ko, detailcategory_en } : UpdateCheckSeniorFAQCategoryConflictRequest['body'] = req.body;
   try {
-    let isDuplicated = false;
+    let isConflict = false;
     const [[now_category]] = await connection.execute<RowDataPacket[]>(
       `SELECT senior_faqs.maincategory_ko, senior_faqs.maincategory_en, senior_faqs.subcategory_ko, senior_faqs.subcategory_en, senior_faqs.detailcategory_ko, senior_faqs.detailcategory_en FROM hobit.senior_faqs WHERE senior_faqs.id = ?`,
       [senior_faq_id]
@@ -40,10 +40,10 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
     const changed_detailcategory_ko = now_category.detailcategory_ko === detailcategory_ko ? false : true;
     const changed_detailcategory_en = now_category.detailcategory_en === detailcategory_en ? false : true;
 
-    const changedData : CheckSeniorFAQCategoryDuplicateResponse['data']['changedData'] = [];
-    const mainConflict: CheckSeniorFAQCategoryDuplicateResponse['data']['changedData'][number]['conflict'] = [];
-    const subConflict: CheckSeniorFAQCategoryDuplicateResponse['data']['changedData'][number]['conflict'] = [];
-    const detailConflict: CheckSeniorFAQCategoryDuplicateResponse['data']['changedData'][number]['conflict'] = [];
+    const conflictedData : CheckSeniorFAQCategoryConflictResponse['data']['conflictedData'] = [];
+    const mainConflict: CheckSeniorFAQCategoryConflictResponse['data']['conflictedData'][number]['conflict'] = [];
+    const subConflict: CheckSeniorFAQCategoryConflictResponse['data']['conflictedData'][number]['conflict'] = [];
+    const detailConflict: CheckSeniorFAQCategoryConflictResponse['data']['conflictedData'][number]['conflict'] = [];
 
     const [new_maincategory_ko] = await connection.execute<RowDataPacket[]>(
       `SELECT maincategory_ko FROM hobit.senior_faqs WHERE senior_faqs.maincategory_en = ?`,
@@ -212,8 +212,8 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
     }
     
     if (mainConflict.length > 0) {
-      isDuplicated = true;
-      changedData.push({
+      isConflict = true;
+      conflictedData.push({
         field: 'maincategory',
         input: {
           ko: maincategory_ko,
@@ -224,8 +224,8 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
     }
 
     if (subConflict.length > 0) {
-      isDuplicated = true;
-      changedData.push({
+      isConflict = true;
+      conflictedData.push({
         field: 'subcategory',
         input: {
           ko: subcategory_ko,
@@ -236,8 +236,8 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
     }
 
     if (detailConflict.length > 0) {
-      isDuplicated = true;
-      changedData.push({
+      isConflict = true;
+      conflictedData.push({
         field: 'detailcategory',
         input: {
           ko: detailcategory_ko,
@@ -247,12 +247,12 @@ router.post("/update/category/check", async (req: Request, res: Response) => {
       });
     }
 
-    const response : CheckSeniorFAQCategoryDuplicateResponse = {
+    const response : CheckSeniorFAQCategoryConflictResponse = {
       statusCode: 200,
       message: "Categories checked successfully",
       data : {
-        isDuplicated: isDuplicated,
-        changedData: changedData
+        isConflict: isConflict,
+        conflictedData: conflictedData
       }
     };
     console.log(response);
