# src/types/faq.ts
@@ -190,7 +190,7 @@ export interface GetAllFAQCategoryResponse {
   };
 }
 
-export type CreateCheckFAQCategoryDuplicateRequest = {
+export type CreateCheckFAQCategoryConflictRequest = {
   body: {
     maincategory_ko: string;
     maincategory_en: string;
@@ -199,15 +199,7 @@ export type CreateCheckFAQCategoryDuplicateRequest = {
   };
 };
 
-export type CreateCheckFAQCategoryDuplicateResponse = {
-  statusCode: number;
-  message: string;
-  data: {
-    isDuplicated: boolean;
-  };
-};
-
-export type UpdateCheckFAQCategoryDuplicateRequest = {
+export type UpdateCheckFAQCategoryConflictRequest = {
   body: {
     faq_id: number;
     maincategory_ko: string;
@@ -217,12 +209,12 @@ export type UpdateCheckFAQCategoryDuplicateRequest = {
   };
 };
 
-export type CheckFAQCategoryDuplicateResponse = {
+export type CheckFAQCategoryConflictResponse = {
   statusCode: number;
   message: string;
   data: {
-    isDuplicated: boolean;
-    changedData: {
+    isConflict: boolean;
+    conflictedData: {
       field: string;
       input: {
         ko: string;
